--- a/src/styles/base/common.css
+++ b/src/styles/base/common.css
@@ -1,12 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 .common {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
-  font-weight: 400;
-  font-size: initial;
-  line-height: 1;
 }
 
 .link {
+  cursor: pointer;
   text-decoration: none;
 }
 
